--- a/assets/business/pikachoose/styles/css3.css
+++ b/assets/business/pikachoose/styles/css3.css
@@ -1,16 +1,10 @@
 /*if you just want to adjust the size of the stage and the thumbnails, you can do so by editing the following lines: */
-
-<!-- control slides picture -->
-
-
-<!-- end -->
-
-
 .pika-thumbs li{width: 144px; height:74px;}
 .pika-stage {height: 250px;}
 
 
-.pikachoose a{color:white;}
+body{font-family: sans-serif;background:#FCFCFC;}
+a{color:white;}
 .pikachoose {width: 500px; margin: 0 auto;}
 .pika-stage {position: relative;border: 3px solid #010101;
 	-moz-box-shadow: 5px 5px 2px #888;-webkit-box-shadow: 5px 5px 2px #888;box-shadow: 5px 5px 2px #888;}
