--- a/assets/business/pikachoose/styles/css3.css
+++ b/assets/business/pikachoose/styles/css3.css
@@ -3,13 +3,13 @@
 .pika-stage {height: 250px;}
 
 
-<!-- 
+/* 
 
-body{font-family: sans-serif;background:#FCFCFC;}
+/*body{font-family: sans-serif;background:#FCFCFC;}
 
-a{color:white;}
+/*a{color:white;}
 
--->
+*/
 
 
 .pikachoose {width: 500px; margin: 0 auto;}
