--- a/assets/business/pikachoose/styles/css3.css
+++ b/assets/business/pikachoose/styles/css3.css
@@ -9,10 +9,17 @@
 
 /*a{color:white;}
 
-*/
-
-
 .pikachoose {width: 500px; margin: 0 auto;}
+
+*/
+<!---  added ----->
+.pikachoose {width: 500px; float:left;}
+
+
+
+
+<!---  added -----
+
 .pika-stage {position: relative;border: 3px solid #010101;
 	-moz-box-shadow: 5px 5px 2px #888;-webkit-box-shadow: 5px 5px 2px #888;box-shadow: 5px 5px 2px #888;}
 	
