--- a/assets/business/pikachoose/styles/css3.css
+++ b/assets/business/pikachoose/styles/css3.css
@@ -13,7 +13,7 @@
 
 */
 <!---  added ----->
-.pikachoose {width: 500px; float:left;}
+.pikachoose {width: 500px; margin: 0 auto;}
 
 
 
@@ -31,6 +31,8 @@
 
 .pika-stage .caption {position: absolute; background: url(75-black.png);  border: 1px solid #141414; font-size: 11px; 
 			color: #fafafa; padding: 10px; text-align: right; bottom: 10px; right: 10px;}
+			
+			
 	.pika-stage .caption p {padding: 0; margin: 0; line-height: 14px;}
 
 .pika-imgnav a {position: absolute; text-indent: -5000px; display: block;z-index:3;cursor:pointer;}
