--- a/assets/business/pikachoose/styles/css3.css
+++ b/assets/business/pikachoose/styles/css3.css
@@ -3,23 +3,9 @@
 .pika-stage {height: 250px;}
 
 
-/* 
-
-/*body{font-family: sans-serif;background:#FCFCFC;}
-
-/*a{color:white;}
-
+body{font-family: sans-serif;background:#FCFCFC;}
+a{color:white;}
 .pikachoose {width: 500px; margin: 0 auto;}
-
-*/
-<!---  added ----->
-.pikachoose {width: 500px; margin: 0 auto;}
-
-
-
-
-<!---  added -----
-
 .pika-stage {position: relative;border: 3px solid #010101;
 	-moz-box-shadow: 5px 5px 2px #888;-webkit-box-shadow: 5px 5px 2px #888;box-shadow: 5px 5px 2px #888;}
 	
@@ -31,8 +17,6 @@
 
 .pika-stage .caption {position: absolute; background: url(75-black.png);  border: 1px solid #141414; font-size: 11px; 
 			color: #fafafa; padding: 10px; text-align: right; bottom: 10px; right: 10px;}
-			
-			
 	.pika-stage .caption p {padding: 0; margin: 0; line-height: 14px;}
 
 .pika-imgnav a {position: absolute; text-indent: -5000px; display: block;z-index:3;cursor:pointer;}
