--- a/assets/business/pikachoose/styles/css3.css
+++ b/assets/business/pikachoose/styles/css3.css
@@ -10,7 +10,11 @@ a{color:white;}
 
 */
 
+/******added  below*****/
 
+.row{overflow:auto;}
+
+/******added * above****/
 
 
 .pikachoose {width: 500px; } /*  margin: 0 auto;  */
