--- a/assets/business/pikachoose/styles/css3.css
+++ b/assets/business/pikachoose/styles/css3.css
@@ -14,6 +14,15 @@ a{color:white;}
 
 .row{overflow:auto;}
 
+.house_details{
+	
+	overflow:auto;
+	margin-left:20;
+	padding:10 10 10 10px;
+	
+}
+
+
 /******added * above****/
 
 
