--- a/assets/business/pikachoose/styles/css3.css
+++ b/assets/business/pikachoose/styles/css3.css
@@ -12,7 +12,12 @@ a{color:white;}
 
 /******added  below*****/
 
-.row{overflow:auto;}
+.row{
+	overflow:auto;
+	margin-bottom:50px;
+	
+	
+	}
 
 .house_details{
 	
