--- a/assets/business/style.css
+++ b/assets/business/style.css
@@ -1115,3 +1115,9 @@ h3.comment-title a{
 #forum .name a{ 
   font-size: 16px;
 }
+<!--  contact page  style.css         ---------------->
+.staff{
+	float:left;
+}
+
+
