--- a/assets/business/style.css
+++ b/assets/business/style.css
@@ -1116,7 +1116,7 @@ h3.comment-title a{
   font-size: 16px;
 }
 <!--  contact page  style.css         ---------------->
-.staff{
+#staff{
 	float:left;
 }
 
